--- a/pet_blog/public/index.html
+++ b/pet_blog/public/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     
-    <title>DRF ReactJS Pet Blog</title>
+    <title></title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
